--- a/css/main.css
+++ b/css/main.css
@@ -15,8 +15,7 @@ body {
     flex-direction: column;
 }
 
-.jumbotron,
-.jumbotron center {
+center {
     display: flex;
     flex: 1 1;
 }
@@ -25,6 +24,7 @@ body {
     flex: 1 1;
     display: flex;
     flex-direction: column;
+    background-color: #eee;
 }
 
 .users-name-in-top-nav-bar {
