--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,12 @@ body {
     font-size: 42px;
 }
 
+.welcome-message-2 {
+    font-size: 36px;
+    padding-bottom: 8px;
+    text-align: center;
+}
+
 .header-bar {
     width: 100%;
     border-color: #080808;
@@ -90,7 +96,7 @@ a.navbar-brand:focus {
     font-size: 26px;
 }
 
-.sentence-in-search-result .sentence-text{
+.sentence-in-search-result .sentence-text {
     font-size: 24px;
 }
 
